--- a/gather-data-service/Dockerfile
+++ b/gather-data-service/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /usr/src/app
 ADD https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh ./
 RUN chmod +x ./wait-for-it.sh
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci --only=production && npm cache clean --force
 COPY . .
 CMD ["node", "index.js"]
