--- a/personal-data-service/package.json
+++ b/personal-data-service/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/microservices": "^7.6.17",
     "@nestjs/platform-express": "^7.6.15",
+    "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.8.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "dotenv": "^10.0.0",
     "got": "^11.8.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
